# webmonitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  monitor.cpp  monitor.hpp  terminal.cpp  terminal.hpp
